fix visibility

--- a/online-car-race-3d/src/style.css
+++ b/online-car-race-3d/src/style.css
@@ -15,6 +15,10 @@ body {
   position: relative;
 }
 
+[hidden] {
+  display: none !important;
+}
+
 .canvas-container {
   width: 100%;
   height: 100%;
